--- a/index.html
+++ b/index.html
@@ -1,187 +1,188 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title> GRATIS SALDO 25.000 YOWESJP — Kuota Habis</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="1_6F78r1iWWAAa_DFOiHEGwdSGjY8f0WyITRN77rYmY" />
+  <meta name="description" content="YOWESJP - Bandar togel online resmi terpercaya di Indonesia. Daftar dan login sekarang untuk menikmati pasaran togel lengkap, result cepat, dan jackpot setiap hari.">
+  <meta name="keywords" content="yowesjp, bandar togel resmi, togel terpercaya, togel online, daftar togel, login togel, togel aman, togel indonesia, result cepat">
+  <meta name="author" content="YOWESJP">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gtatogel-vip.github.io/gtatogel/" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="YOWESJP - Bandar Togel Online Terpercaya & Resmi">
+  <meta property="og:description" content="Daftar dan login sekarang di YOWESJP - situs togel resmi terpercaya dengan pasaran terlengkap dan jackpot besar setiap hari.">
+  <meta property="og:image" content="https://gtatogel-vip.github.io/gtatogel/barner.png">
+  <meta property="og:url" content="https://gtatogel-vip.github.io/gtatogel/">
+  <meta property="og:type" content="website">
+  
+  <title>YOWESJP | Bandar Togel Online Resmi & Terpercaya - Daftar & Login Aman</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04);--danger:#ef4444;--vip:#facc15;--warning:#fbbf24;--claim1:#22c55e;--claim2:#16a34a}
-    body{font-family:Inter,ui-sans-serif; background:#071023; color:#e6eef6; margin:0; padding:12px; display:flex; justify-content:center}
-    .container{max-width:640px;width:100%;display:flex;flex-direction:column;gap:20px}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:14px;padding:20px;box-shadow:0 8px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
-    .hero{text-align:center}
-    .highlight-title{font-size:22px;font-weight:900;color:#06b6d4;margin-bottom:14px}
-    .hero img{max-width:100%;border-radius:10px;margin:10px 0}
-    .badges{display:flex;gap:6px;flex-wrap:wrap;justify-content:center}
-    .badge{background:var(--glass);padding:6px 10px;border-radius:999px;font-size:12px;color:#cfeff6}
-    .list{margin:14px 0;text-align:left}
-    .list li{margin:8px 0;display:flex;gap:10px;align-items:flex-start;font-size:14px}
-    .dot{min-width:18px;height:18px;border-radius:6px;display:grid;place-items:center;background:linear-gradient(180deg,var(--accent),#0891b2);font-weight:700;font-size:12px}
-    .cta-wrap{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:14px}
-    .btn{border:0;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;font-size:14px;transition:.3s;text-decoration:none;display:inline-block}
-    .btn:hover{transform:scale(1.03)}
-    .btn-primary{background:linear-gradient(90deg,var(--accent),#0891b2);color:#042027}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#cfeff6}
-    .btn-claim{background:linear-gradient(90deg,var(--claim1),var(--claim2));color:#fff;font-weight:900;box-shadow:0 0 10px rgba(34,197,94,0.6)}
-    .btn-vip{background:linear-gradient(90deg,var(--vip),#f59e0b);color:#1a1200;box-shadow:0 0 10px rgba(250,204,21,0.6);animation:glow 1.5s infinite alternate}
-    @keyframes glow{from{box-shadow:0 0 5px rgba(250,204,21,0.5)}to{box-shadow:0 0 20px rgba(250,204,21,1)}}
-    .counter-box{text-align:center;margin-top:12px;font-size:14px;color:#a9f6ff}
-    .counter-number{font-size:20px;font-weight:800;color:#06b6d4;margin-top:4px}
-    .warning{margin-top:8px;font-size:14px;font-weight:700;color:var(--danger);display:none}
-    .progress-wrap{background:rgba(255,255,255,0.1);border-radius:10px;height:14px;width:100%;margin-top:10px;overflow:hidden}
-    .progress-bar{height:100%;background:linear-gradient(90deg,#06b6d4,#0891b2);width:100%;transition:width .5s}
-    .testimoni-box{height:180px;overflow:hidden;position:relative}
-    .testimoni-list{display:flex;flex-direction:column;gap:8px;position:absolute;animation:scrollUp 40s linear infinite}
-    .testimoni-item{display:flex;align-items:center;gap:8px;background:rgba(255,255,255,0.04);padding:8px 10px;border-radius:8px;font-size:13px;color:#dceff7}
-    .avatar{width:28px;height:28px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:700;font-size:13px;color:#fff}
-    @keyframes scrollUp{0%{top:100%}100%{top:-300%}}
-    .important-note{background:rgba(251,191,36,0.15);border-left:4px solid var(--warning);padding:12px;border-radius:10px;color:#fff4ce;font-size:14px;margin-top:16px;display:flex;gap:8px;align-items:flex-start}
-    .popup{position:fixed;bottom:20px;left:20px;background:rgba(15,23,36,0.95);color:#fff;padding:10px 14px;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,0.5);opacity:0;transform:translateY(30px);transition:all .5s ease;z-index:9999;font-size:14px}
-    .popup.show{opacity:1;transform:translateY(0)}
-    .icon{font-size:16px;margin-right:4px}
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      background: #0a0f11;
+      font-family: 'Orbitron', sans-serif;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .animated-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(60deg, #00e5d3, #e0e0e0, #ffe066, #0a0f11);
+      background-size: 400% 400%;
+      animation: bgmove 15s ease infinite;
+      z-index: -1;
+      opacity: 0.05;
+    }
+
+    @keyframes bgmove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .logo {
+      width: 120px;
+      margin-top: 20px;
+      margin-bottom: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #00e5d3;
+      z-index: 1;
+    }
+
+    .marquee, .seo-marquee {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      z-index: 1;
+      margin: 10px 0;
+    }
+
+    .marquee span, .seo-marquee span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll-left 20s linear infinite;
+      color: #ffe066;
+      font-size: 14px;
+    }
+
+    @keyframes scroll-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+
+    .banner {
+      width: 100%;
+      max-width: 450px;
+      border-radius: 16px;
+      margin-bottom: 30px;
+      box-shadow: 0 0 30px rgba(0, 229, 211, 0.3);
+      z-index: 1;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      max-width: 320px;
+      text-align: center;
+      padding: 16px;
+      margin: 12px 0;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: pulse 2s infinite;
+      z-index: 1;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(255,255,255,0.2);
+    }
+
+    .btn-daftar {
+      background: linear-gradient(to right, #00e5d3, #e0e0e0);
+      color: #000;
+    }
+
+    .btn-login {
+      background: linear-gradient(to right, #ffe066, #00e5d3);
+      color: #000;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    .seo-text {
+      max-width: 500px;
+      text-align: center;
+      margin-top: 10px;
+      font-size: 14px;
+      color: #ddd;
+      line-height: 1.6;
+      z-index: 1;
+    }
+
+    footer {
+      margin-top: auto;
+      text-align: center;
+      font-size: 13px;
+      color: #aaa;
+      padding: 20px 0;
+      z-index: 1;
+    }
+
+    h1 {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <main class="container">
-    <section class="card hero">
-      <div class="highlight-title">💰 SPESIAL LAUNCHING YOWESJP — Kuota Habis</div>
-      <img src="1758851838087.jpg" alt="Promo Bonus">
-      <div class="badges">
-        <div class="badge">✅ GRATIS SALDO 25.000</div>
-        <div class="badge">💯 100% asli</div>
-        <div class="badge">⏱️ Kuota Habis</div>
-      </div>
+  <h1>YOWESJP - Bandar Togel Online Resmi Terpercaya</h1>
+  <div class="animated-bg"></div>
 
-      <ul class="list">
-        <li><div class="dot">1</div><div><strong>Tanpa depo</strong></div></li>
-        <li><div class="dot">2</div><div><span class="icon">🏦💳</span><strong>Bisa klaim ke semua bank & e-wallet</strong> — pastikan penulisan data bank dan nama benar.</div></li>
-        <li><div class="dot">3</div><div><strong>Bisa WD</strong> — Pengguna bisa menarik tanpa harus bermain & isi saldo.</div></li>
-        <li><div class="dot">4</div><div><strong>Kuota terbatas</strong> — Kuota sudah habis.</div></li>
-      </ul>
+  <img src="logo.webp" alt="Logo YOWESJP" class="logo">
 
-      <div class="cta-wrap">
-        <!-- Tombol aktif: ganti data-href dengan URL tujuan Anda -->
-        <a href="#" class="btn btn-primary" role="button" data-href="https://example.com/daftar-vip" onclick="handleAction(event,'vip')">Daftar vip member</a>
+  <div class="marquee">
+    <span>Selamat datang di YOWESJP - Situs Togel Resmi & Terpercaya! Daftar Sekarang dan Raih Jackpot Setiap Hari!</span>
+  </div>
 
-        <a href="#" class="btn btn-ghost" role="button" data-href="https://example.com/daftar-id-vip-gacor" onclick="handleAction(event,'idv')">DAFTAR ID VIP GACOR</a>
+  <img src="barner.png" alt="Banner Promo YOWESJP" class="banner">
 
-        <a href="#" class="btn btn-claim" role="button" data-href="https://example.com/klaim-bonus" onclick="handleAction(event,'claim')">KLAIM BONUS 100%</a>
-      </div>
+  <a href="https://zeus.gtatogel.top/register?referral_code=aliong888" class="btn btn-daftar" target="_blank">DAFTAR</a>
+  <a href="https://zeus.gtatogel.top/register?referral_code=aliong888" class="btn btn-login" target="_blank">LOGIN</a>
 
-      <div class="counter-box">
-        <div>Sisa kuota:</div>
-        <div class="counter-number" id="claimedCount">0 orang</div>
-        <div class="progress-wrap"><div class="progress-bar" id="progressBar" style="width:0%"></div></div>
-        <div class="warning" id="warningMsg">❌ Kuota sudah habis!</div>
-      </div>
-    </section>
+  <p class="seo-text">
+    YOWESJP adalah situs togel online terpercaya yang menyediakan layanan daftar dan login mudah, cepat, dan aman. Menyediakan pasaran togel terlengkap, result tercepat, serta sistem keamanan data terenkripsi. Bergabung sekarang dan nikmati promo serta jackpot setiap hari.
+  </p>
 
-    <section class="card testimoni-section">
-      <h2>💬 Testimoni Member</h2>
-      <div class="testimoni-box">
-        <div class="testimoni-list" id="testimoniList"></div>
-      </div>
-    </section>
-
-    <section class="important-note">
-      ⚠️ <div>Saldo seharusnya masuk 1 Oktober 2025, paling lambat Jam 13:00 WIB — <strong>PERINGATAN:</strong> halaman ini hanya contoh. Jangan masukkan data sensitif pada situs yang mencurigakan.</div>
-    </section>
-  </main>
-
-  <div class="popup" id="popup"></div>
-  <audio id="tingSound" src="https://assets.mixkit.co/sfx/preview/mixkit-bell-notification-933.mp3" preload="auto"></audio>
-
-  <script>
-    const claimedCount = document.getElementById('claimedCount');
-    const warningMsg = document.getElementById('warningMsg');
-    const progressBar = document.getElementById('progressBar');
-    const popup = document.getElementById('popup');
-
-    const total = 500;
-    // Kuota tetap habis — ubah nilai ini jika ingin mengaktifkan klaim
-    let remaining = 0;
-
-    const testimoniData = [
-      {name:"Budi",text:"Baru daftar langsung cair, mantap 👍"},
-      {name:"Sinta",text:"Gak perlu depo, saldo masuk beneran"},
-      {name:"Rizky",text:"Cuma isi data, bonus cair ke akun saya"},
-      {name:"Dewi",text:"WD tanpa harus main, keren banget"},
-      {name:"Andi",text:"Kuota terbatas, untung sempet klaim"},
-      {name:"Fitri",text:"Skeptis awalnya, ternyata beneran cair"},
-      {name:"Rian",text:"Udah coba, 25rb masuk!"},
-      {name:"Yuli",text:"Langsung WD, gampang banget"},
-      {name:"Bayu",text:"Gratis saldo asli tanpa tipu-tipu"},
-      {name:"Wulan",text:"Serius ini real, jangan sampai ketinggalan"},
-      {name:"Agus",text:"Proses cepat, saldo nambah otomatis"},
-      {name:"Lina",text:"Baru klik klaim, saldo langsung ada"},
-      {name:"Rama",text:"Kaget, ternyata bener dikasih gratis"},
-      {name:"Tari",text:"Gak ribet, tinggal daftar terus klaim"},
-      {name:"Doni",text:"Udah WD saldo gratisnya, aman banget"},
-      {name:"Hendra",text:"Cuma daftar, langsung dapat uang jajan"},
-      {name:"Maya",text:"Serius gratis, tanpa syarat susah"},
-      {name:"Joko",text:"Ternyata asli cair, mantap pol"},
-      {name:"Nia",text:"Bonus real, langsung masuk akun"},
-      {name:"Fajar",text:"Semoga sering ada promo kayak gini"}
-    ];
-
-    function showPopup(name){
-      if (remaining === 0) return; // jangan munculkan popup klaim karena kuota habis
-      popup.textContent = `🎉 ${name} Berhasil klaim Rp25.000`;
-      popup.classList.add('show');
-      setTimeout(()=> popup.classList.remove('show'), 4000);
-    }
-
-    function updateCount(){
-      if(remaining < 0) remaining = 0;
-      claimedCount.textContent = remaining + ' orang';
-      const percent = (remaining/total)*100;
-      progressBar.style.width = percent + '%';
-      if(remaining <= 50 && remaining > 0){
-        warningMsg.style.display = 'block';
-        warningMsg.textContent = '⚠️ Kuota hampir habis!';
-      } else if (remaining === 0) {
-        warningMsg.style.display = 'block';
-        warningMsg.textContent = '❌ Kuota sudah habis!';
-      } else {
-        warningMsg.style.display = 'none';
-      }
-    }
-
-    // Handler untuk tombol; action: 'vip' | 'idv' | 'claim'
-    function handleAction(e, action){
-      e.preventDefault();
-      const el = e.currentTarget;
-      const href = el.getAttribute('data-href') || '#';
-
-      if (action === 'claim') {
-        if (remaining === 0) {
-          // kuota habis — beri tahu pengguna
-          alert('Maaf, kuota sudah habis. Silakan coba lain waktu.');
-          return;
-        } else {
-          // jika kuota tersedia, buka link klaim di tab baru
-          window.open(href, '_blank');
-          return;
-        }
-      }
-
-      // Untuk tombol daftar (vip / idv), langsung buka link di tab baru.
-      // NOTE: Ganti data-href dengan URL tujuan yang sebenarnya.
-      window.open(href, '_blank');
-    }
-
-    // isi testimoni (tampilan saja)
-    const testimoniList = document.getElementById('testimoniList');
-    const colors = ["#06b6d4","#f97316","#10b981","#8b5cf6","#ef4444","#eab308","#0ea5e9","#f43f5e","#14b8a6","#9333ea","#facc15","#22c55e","#3b82f6","#f87171","#16a34a","#fb923c","#38bdf8","#ec4899","#84cc16"];
-    testimoniData.forEach(t=>{
-      const color = colors[Math.floor(Math.random()*colors.length)];
-      const item = document.createElement('div');
-      item.className='testimoni-item';
-      item.innerHTML = `<div class="avatar" style="background:${color}">${t.name[0]}</div><div><strong>${t.name}:</strong> ${t.text}</div>`;
-      testimoniList.appendChild(item);
-    });
-
-    updateCount();
-  </script>
-</body>
-</html>
+  <div class="seo-marquee">
+    <span>YOWESJP | Situs Toge
