--- a/index.html
+++ b/index.html
@@ -185,4 +185,4 @@
   </p>
 
   <div class="seo-marquee">
-    <span>YOWESJP | Situs Toge
+    <span>YOWESJP | YOWESJP adalah situs togel online terpercaya yang menyediakan layanan daftar dan login mudah, cepat, dan aman. Menyediakan pasaran togel terlengkap, result tercepat, serta sistem keamanan data terenkripsi. Bergabung sekarang dan nikmati promo serta jackpot setiap hari
